--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,11 @@ Features planned:
 - Abblocken von Seiten die keinen Feed kenen, random cat content statt dessen
 - Encoding fixen
 - fly.io ausprobieren um Proxy verfügbar zu machen
+- automatische dark/light mode Umschaltung je nach Tageszeit
+- eine Art von INI-Datei
+- unterschiedliche KOnfigutationen auf unterschiedlichen Ports
+- Aufräumen: z.B. view im Router initialisieren und übergeben, MVC richtig benennen...
+- RSS feeds auf Artikelseiten abfangen!
+- depts.ts anlegen
+- alles nach TS konvertieren
+
